<resources>
    <string name="app_name">ChatChat</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- activity_login -->
    <string name="activity_login_text_login">登录ChatChat</string>
    <string name="activity_login_input_account">输入用户名</string>
    <string name="activity_login_input_passowrd">输入密码</string>
    <string name="activity_login_btn_login">登录</string>
    <string name="activity_login_btn_register">注册</string>
    <string name="activity_login_text_remember_pass">记住密码</string>

    <!-- activity_main -->
    <string name="activity_main_btn_chat">聊天</string>
    <string name="activity_main_btn_contact">联系人</string>
    <string name="activity_main_btn_share">朋友圈</string>

    <!-- activity_sign-->
    <string name="activity_sign_text_account">用户名：</string>
    <string name="activity_sign_text_password">密码：</string>
    <string name="activity_sign_text_repassword">重复：</string>
    <string name="activity_sign_hint_account">请在此输入用户名</string>
    <string name="activity_sign_hint_password">请在此输入密码</string>
    <string name="activity_sign_hint_repassword">请在此再次输入密码</string>
    <string name="activity_sign_btn_register">注册</string>

    <!-- activity_setting -->
    <string name="activity_setting_text_setting">个人信息</string>
    <string name="activity_setting_text_nickname">昵称</string>

    <!-- activity_image -->
    <string name="activity_image_text_image">图片查看</string>

    <!-- activity_add_contact -->
    <string name="activity_add_contact_text_contact">添加联系人</string>
    <string name="activity_add_contact_hint_account">在此输入对方用户名</string>

    <!-- dialog_password -->
    <string name="dialog_password_text_settingPassword">更改密码</string>
    <string name="dialog_password_text_oldpassword">原密码：</string>
    <string name="dialog_password_text_password">新密码：</string>
    <string name="dialog_password_text_repassword">重复：</string>
    <string name="dialog_password_hint_oldpassword">在此输入旧密码</string>
    <string name="dialog_password_hint_password">请在此输入新密码</string>
    <string name="dialog_password_hint_repassword">再次输入新密码</string>

    <!-- fragment_contacts -->
    <string name="fragment_contacts_list_text_new">新的好友</string>

    <!-- dialogfragment_nickname -->
    <string name="dialog_nickname_text_nickname">昵称：</string>
    <string name="dialog_nickname_hint_nickname">输入昵称</string>
    <string name="dialog_nickname_text_settingNickname">更改昵称</string>

    <!-- dialogfragment_avatar -->
    <string name="dialog_avatar_text_avatar">更改头像</string>
    <string name="dialog_avatar_btn_takePhoto">拍照</string>
    <string name="dialog_avatar_btn_pickPhoto">选择照片</string>

    <!-- dialogfragment_newfriend -->
    <string name="dialog_newfriend_text_newfriend">昵称</string>
    <string name="dialog_newfriend_btn_accept">接受</string>
    <string name="dialog_newfriend_btn_ignore">忽略</string>

    <!-- dialogfragment_add -->
    <string name="dialog_add_text_add">添加内容</string>
    <string name="dialog_add_btn_contact">添加联系人</string>
    <string name="dialog_add_btn_share">发朋友圈</string>

    <!-- activity_add_share -->
    <string name="activity_add_share_text_share">朋友圈</string>
    <string name="activity_add_share_hint_share">今天心情怎么样...</string>
    <string name="activity_add_share_text_photo">点击设置图片</string>
</resources>
