<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="15dp"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.leif.chatchat.ui.SignActivity">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <Button
            android:id="@+id/activity_sign_btn_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="@drawable/back" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="6"
            android:gravity="center"
            android:text="@string/activity_sign_btn_register"
            android:textColor="@android:color/black"
            android:textSize="22dp" />

        <Button
            android:id="@+id/activity_sign_btn_register"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="@drawable/check" />
    </TableRow>

    <ImageView
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/activity_sign_text_account" />

            <EditText
                android:id="@+id/activity_sign_input_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_sign_hint_account"
                android:maxLines="1"
                android:textSize="14dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/activity_sign_text_password" />

            <EditText
                android:id="@+id/activity_sign_input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_sign_hint_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textSize="14dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/activity_sign_text_repassword" />

            <EditText
                android:id="@+id/activity_sign_input_repassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_sign_hint_repassword"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textSize="14dp" />
        </TableRow>

    </LinearLayout>

</LinearLayout>
