<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragment.Dialog.NicknameDialogFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TableRow
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:gravity="center">

            <Button
                android:id="@+id/dialog_password_btn_back"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:background="@drawable/back" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="6"
                android:gravity="center"
                android:text="@string/dialog_password_text_settingPassword"
                android:textColor="@android:color/black"
                android:textSize="18dp" />

            <Button
                android:id="@+id/dialog_password_btn_check"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:background="@drawable/check" />
        </TableRow>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/darker_gray" />

        <TableRow
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/dialog_password_text_oldpassword" />

            <EditText
                android:id="@+id/dialog_password_input_oldpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dialog_password_hint_oldpassword"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textSize="14dp" />
        </TableRow>

        <TableRow
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/dialog_password_text_password" />

            <EditText
                android:id="@+id/dialog_password_input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dialog_password_hint_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textSize="14dp" />
        </TableRow>

        <TableRow
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/dialog_password_text_password" />

            <EditText
                android:id="@+id/dialog_password_input_repassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dialog_password_hint_repassword"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textSize="14dp" />
        </TableRow>
    </LinearLayout>

</LinearLayout>
