<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.leif.chatchat.ui.fragment.Dialog.NewFriendDialogFragment">

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TableRow
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:gravity="center">

            <Button
                android:id="@+id/dialog_newfriend_btn_back"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:background="@drawable/back"
                android:visibility="invisible"/>

            <TextView
                android:id="@+id/dialog_newfriend_text_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="6"
                android:gravity="center"
                android:text="@string/dialog_newfriend_text_newfriend"
                android:textColor="@android:color/black"
                android:textSize="18dp" />

            <Button
                android:id="@+id/dialog_newfriend_btn_check"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:background="@drawable/check"
                android:visibility="invisible" />
        </TableRow>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/dialog_newfriend_btn_accept"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/dialog_newfriend_btn_accept" />

            <Button
                android:layout_marginTop="10dp"
                android:id="@+id/dialog_newfriend_btn_ignore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/dialog_newfriend_btn_ignore" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
